[package]
name = "mealie-rs"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "A simple library for interacting with the mealie API"


[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typed-builder = "0.20.0"
uuid = { version = "1.11.0", features = ["serde"] }
